k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saveit
  labels:
    app.kubernetes.io/name: saveit
    app.kubernetes.io/part-of: saveit-platform
